# Qavrn

./: .gitignore  README.md  start.py
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  api.py  chunker.py  cli.py  config.py  embedder.py  indexer.py  llm.py  parser.py  rag.py  store.py  watcher.py
data/chroma/d9593a07-05d4-4ba9-b035-41c8d100b715/: index_metadata.pickle
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatMessage.tsx  SearchBar.tsx  Sidebar.tsx  SourceCard.tsx
scripts/: build-desktop.ps1  dev-desktop.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test_docs/: French Press Coffee Guide.md  MCP Tutorial - NetworkChuck.md  bank.py  first part resume.txt  start.py
